--- a/index.html
+++ b/index.html
@@ -7,36 +7,6 @@
     <title>Company Profile</title>
     <link rel="stylesheet" href="gaya.css">
 
-    <style type="text/css">
-        h1 {
-            margin-top: 130px;
-        }
-
-        .about {
-            font-family: sans-serif;
-            color: #444;
-            border-collapse: collapse;
-            width: 50%;
-            border: 1px solid #f2f5f7;
-            margin-top: 50px;
-        }
-
-        .about tr th {
-            background: #041e29;
-            color: #fff;
-            font-weight: normal;
-        }
-
-        .about, th, td {
-            padding: 8px 20px;
-            text-align: center;
-        }
-
-        .about tr:nth-child(even) {
-            background: #86dcec;
-        }
-
-
     </style>
 </head>
 <body>
@@ -77,8 +47,10 @@
 <section id="about">
    <!---- <p><a href="" class="tbl-hitam">About SR</a> </p> -->
     <img src="assets/kantor.jpg" class="kantor">
+<div class="textkantor">
     <p> This SR Group, hadir untuk mewujudkan, memberikan feedback baik dengan basis teknologi dengan perwakilan Hybe Corporation (하이브) berpusat di Korea Selatan yang didirikan pada tahun 2025 oleh Suci Ramadhani-Kim sebagai Big Hit Company. Perusahaan ini beroperasi dibidang entertaiment dan industri music.</p>
-    <table class="tabel">
+</div>
+    <table class="tabelabout">
         <tr>
             <th>No</th>
             <th>Kategori</th>
@@ -107,7 +79,7 @@
         </tr>
     </table>
 
-    <fieldset>
+    <fieldset class="kunjungan">
         <legend>Kunjungan</legend>
         <label for="group"></label>
         "Group:"
@@ -151,16 +123,25 @@
 </section> 
 
 <section id="service">
-    <img src="assets/latihan.jpg" class="latihan">
-    <img src="assets/awards.jpg" class="awards">
-<div id="sosmed"></div>
-    <div class="akun">
-        <a href="https://www.youtube.com/watch?v=aIuDHdDl_lc"
-            target="_blank"><i class="fa fa-youtube"></i></a>
-        </a>
-
-    </div>
-  
+    <h3> SR Group Bidang :</h3>
+<ol type='i'>
+    <li>Industri Musik</li>
+    <li>Industri Entartaiment</li>
+    <li>Industri Film</li>
+</ol>
+<h3> SR Group Company :</h3>
+<ul type="disc">
+    <li>Hybe</li>
+    <li>Big Hit</li>
+    <li>All About Agency</li>
+</ul>
+<dl>
+<dt>SR Group</dt>
+    <dd>For manage semua partners</dd>
+    <dt>SR Group</dt>
+    <dd>Tidak hanya satu bidang</dd>
+</dl>
+    <iframe class="ukuranservice" width="560" height="315" src="https://www.youtube.com/embed/zbuAIAoBbO0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
 <section id="partners">
